src/DirectoryObjects/DirectoryObjects/docs/v1.0-beta/Microsoft.Graph.DirectoryObjects.md
---
Module Name: Microsoft.Graph.DirectoryObjects
Module Guid: 03acad7c-0b7a-4b17-8ba1-b0fe479190cb
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.directoryobjects
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.DirectoryObjects Module
## Description
Microsoft Graph PowerShell Cmdlets

## Microsoft.Graph.DirectoryObjects Cmdlets
### [Confirm-MgDirectoryObjectMemberGroup](Confirm-MgDirectoryObjectMemberGroup.md)
Invoke action checkMemberGroups

### [Confirm-MgDirectoryObjectMemberObject](Confirm-MgDirectoryObjectMemberObject.md)
Invoke action checkMemberObjects

### [Get-MgDirectoryObject](Get-MgDirectoryObject.md)
Invoke action getByIds

### [Get-MgDirectoryObjectMemberGroup](Get-MgDirectoryObjectMemberGroup.md)
Invoke action getMemberGroups

### [Get-MgDirectoryObjectMemberObject](Get-MgDirectoryObjectMemberObject.md)
Invoke action getMemberObjects

### [Get-MgDirectoryObjectUserOwnedObject](Get-MgDirectoryObjectUserOwnedObject.md)
Invoke action getUserOwnedObjects

### [New-MgDirectoryObject](New-MgDirectoryObject.md)
Add new entity to directoryObjects

### [Remove-MgDirectoryObject](Remove-MgDirectoryObject.md)
Delete entity from directoryObjects

### [Restore-MgDirectoryObject](Restore-MgDirectoryObject.md)
Invoke action restore

### [Test-MgDirectoryObjectProperty](Test-MgDirectoryObjectProperty.md)
Invoke action validateProperties

### [Update-MgDirectoryObject](Update-MgDirectoryObject.md)
Update entity in directoryObjects

