src/DirectoryObjects/DirectoryObjects/docs/v1.0/Microsoft.Graph.DirectoryObjects.md
---
Module Name: Microsoft.Graph.DirectoryObjects
Module Guid: cd81ac09-9786-4db5-b5f6-0880bf0249ed
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.directoryobjects
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.DirectoryObjects Module
## Description
Microsoft Graph PowerShell Cmdlets

## Microsoft.Graph.DirectoryObjects Cmdlets
### [Confirm-MgDirectoryObjectMemberGroup](Confirm-MgDirectoryObjectMemberGroup.md)
Invoke action checkMemberGroups

### [Confirm-MgDirectoryObjectMemberObject](Confirm-MgDirectoryObjectMemberObject.md)
Invoke action checkMemberObjects

### [Get-MgDirectoryObject](Get-MgDirectoryObject.md)
Get entity from directoryObjects by key

### [Get-MgDirectoryObjectAvailableExtensionProperty](Get-MgDirectoryObjectAvailableExtensionProperty.md)
Invoke action getAvailableExtensionProperties

### [Get-MgDirectoryObjectMemberGroup](Get-MgDirectoryObjectMemberGroup.md)
Invoke action getMemberGroups

### [Get-MgDirectoryObjectMemberObject](Get-MgDirectoryObjectMemberObject.md)
Invoke action getMemberObjects

### [Get-MgDirectoryObjectMicrosoftGraphAdministrativeUnitDelta](Get-MgDirectoryObjectMicrosoftGraphAdministrativeUnitDelta.md)
Invoke function delta

### [New-MgDirectoryObject](New-MgDirectoryObject.md)
Add new entity to directoryObjects

### [Remove-MgDirectoryObject](Remove-MgDirectoryObject.md)
Delete entity from directoryObjects

### [Restore-MgDirectoryObject](Restore-MgDirectoryObject.md)
Invoke action restore

### [Test-MgDirectoryObjectProperty](Test-MgDirectoryObjectProperty.md)
Invoke action validateProperties

### [Update-MgDirectoryObject](Update-MgDirectoryObject.md)
Update entity in directoryObjects

